cambio error pequeño

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </div>
       </nav>
       <br><br><br>
-    <ul >
-        <LI class="text-primary"><a href="our_loving_cats.html" target="_blank"> Our loving cats</a></LI>
+      <ul >
+        <LI class="text-primary"><a href="Our_loving_cats and dogs.html" target="_blank"> Our loving cats</a></LI>
       <br>
         <LI><a href="Cat_memes.html" target="_blank"> Cats memes</a></LI>
       <br>
         <LI><a href="Dogs_memes.html" target="_blank"> Dog memes</a></LI>
       <br>
-        <LI><a href="https://www.mundodeportivo.com/elotromundo/mascotas/20180414/442177829913/tips-para-cuidar-a-tu-perro.html" target="_blank"> Dog caring</a></LI>
+        <LI><a href="https://www.mundodeportivo.com/elotromundo/mascotas/20180414/442177829913/tips-para-cuidar-a-tu-perro.html" target="_blank"> Dog caring (external link)</a></LI>
       <br>
-        <LI><a href="https://www.muyinteresante.es/mascotas/fotos/15-consejos-basicos-para-cuidar-gatos-bebes" target="_blank"> Cats caring</a></LI>
+        <LI><a href="https://www.muyinteresante.es/mascotas/fotos/15-consejos-basicos-para-cuidar-gatos-bebes" target="_blank"> Cats caring (external link)</a></LI>
 
     </ul>  
 </body>
