Cambio de letra, agregado de CSS

--- a/Dogs_memes.html
+++ b/Dogs_memes.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyLovingCats&Dogs</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <nav class="navbar bg-light">
@@ -16,7 +17,7 @@
           </a>
         </div>
     </nav>
-    <header>Dog Memes!!!!!!</header>
+    <header class="lista">Dog Memes!!!!!!</header>
     <h1>Despicable me</h1>
         <img src="Catdogsimages/dog-memes/dog_meme1.jpg" alt="" width="400">
     <h1>SHHHHHHHHHHH!!<img src="Catdogsimages/Emoji_silence.jpg" alt="" width="10"></h1>
