--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyLovingCats&Dogs</title>    
+    <title>MyLovingCats&Dogs</title>   
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
         <nav class="navbar bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.html"  >
             <img src="Catdogsimages/portada.jpg" alt="4 cats and dogs standig" height="200
-            " class="d-inline-block align-text-top">
-            MyLovingCats&Dogs
+            " class="d-inline-block align-text-top" style="border: 5px black dotted"   >
+            <i style="font-size: 25 px" >MyLovingCats&Dogs</i>
           </a>
         </div>
       </nav>
       <br><br><br>
-      <ul >
-        <LI class="text-primary"><a href="Our_loving_cats and dogs.html" target="_blank"> Our loving cats</a></LI>
+      <ul class="lista">
+        <LI> <a href="Our_loving_cats.html" target="_blank"> Our loving cats and dogs</a></LI>
       <br>
         <LI><a href="Cat_memes.html" target="_blank"> Cats memes</a></LI>
       <br>
