--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
       <br><br><br>
       <ul class="lista">
-        <LI> <a href="Our_loving_cats.html" target="_blank"> Our loving cats and dogs</a></LI>
+        <LI> <a href="our_loving_cats.html" target="_blank"> Our loving cats and dogs</a></LI>
       <br>
         <LI><a href="Cat_memes.html" target="_blank"> Cats memes</a></LI>
       <br>
